RESOLVED FIXED142356
WKWebView Encoder for remote object communication does not implement encodeInt32:forKey:
https://bugs.webkit.org/show_bug.cgi?id=142356
Summary WKWebView Encoder for remote object communication does not implement encodeIn...
Anders Carlsson
Reported 2015-03-05 12:43:13 PST
WKWebView Encoder for remote object communication does not implement encodeInt32:forKey:
Attachments
Patch (2.04 KB, patch)
2015-03-05 12:46 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-03-05 12:46:50 PST
Anders Carlsson
Comment 2 2015-03-05 13:57:49 PST
Note You need to log in before you can comment on or make changes to this bug.