WKWebView Encoder for remote object communication does not implement encodeInt32:forKey: https://bugs.webkit.org/show_bug.cgi?id=142356 rdar://problem/20058952

Reviewed by Tim Horton.

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(-[WKRemoteObjectEncoder encodeInt32:forKey:]):
(-[WKRemoteObjectDecoder decodeInt32ForKey:]):

Canonical link: https://commits.webkit.org/160393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181099 268f45cc-cd09-0410-ab3c-d52691b4dbfc